# src/modules/products/useCases/createCategories/CreateCategoryController.ts
@@ -5,21 +5,18 @@ import { CreateCategoryUseCase } from "./CreateCategoryUseCase";
 
 class CreateCategoryController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { title, parent_title, indentation, icon_url, image_url, priority } =
-      request.body;
+    const { title, parent_title, category_level, icon_url } = request.body;
 
     const createCategoryUseCase = container.resolve(CreateCategoryUseCase);
 
     await createCategoryUseCase.execute({
       title,
       parent_title,
-      indentation,
+      category_level,
       icon_url,
-      image_url,
-      priority,
     });
 
-    return response.status(201).send();
+    return response.status(201).json({ message: "Category created" });
   }
 }
 
