# src/modules/products/useCases/importCategories/ImportCategoriesController.ts
@@ -11,7 +11,7 @@ class ImportCategoriesController {
 
     await importCategoriesUseCase.execute(file);
 
-    return response.status(201).send();
+    return response.status(201).send({ message: "Categories created" });
   }
 }
 
