# src/shared/infra/http/routes/categories.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from "express";
 import multer from "multer";
 
-import { CreateCategoryController } from "../modules/products/useCases/createCategories/CreateCategoryController";
-import { ImportCategoriesController } from "../modules/products/useCases/importCategories/ImportCategoriesController";
-import { ListCategoriesController } from "../modules/products/useCases/listCategories/ListCategoriesController";
-import { NestCategoriesController } from "../modules/products/useCases/nestCategories/NestCategoriesController";
-import { GroupByIndentationController } from "../modules/products/useCases/sortCategories/GroupByIndentation/GroupByIndentationController";
+import { CreateCategoryController } from "@modules/products/useCases/createCategories/CreateCategoryController";
+import { ImportCategoriesController } from "@modules/products/useCases/importCategories/ImportCategoriesController";
+import { ListCategoriesController } from "@modules/products/useCases/listCategories/ListCategoriesController";
+import { NestCategoriesController } from "@modules/products/useCases/nestCategories/NestCategoriesController";
+import { GroupByCategoryLevelController } from "@modules/products/useCases/sortCategories/GroupByIndentation/GroupByCategoryLevelController";
 
 const categoriesRoutes = Router();
 
@@ -15,8 +15,9 @@ const upload = multer({
 
 const createCategoryController = new CreateCategoryController();
 const listCategoriesController = new ListCategoriesController();
-const groupByIndentationController = new GroupByIndentationController();
 const nestCategoriesController = new NestCategoriesController();
+const groupByCategoryLevelController = new GroupByCategoryLevelController();
+
 const importCategoriesController = new ImportCategoriesController();
 
 categoriesRoutes.post("/", createCategoryController.handle);
@@ -26,8 +27,8 @@ categoriesRoutes.get("/", listCategoriesController.handle);
 categoriesRoutes.get("/nest", nestCategoriesController.handle);
 
 categoriesRoutes.get(
-  "/group/by_indentation",
-  groupByIndentationController.handle
+  "/group/by_category_level",
+  groupByCategoryLevelController.handle
 );
 
 categoriesRoutes.post(
